[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devstress"
version = "1.0.1"
description = "Zero-Config Load Testing for Developers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DevStress", email = "hello@devstress.dev"}
]
keywords = ["load testing", "performance", "api testing", "devtools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/midnightnow/devstress"
Repository = "https://github.com/midnightnow/devstress"
Issues = "https://github.com/midnightnow/devstress/issues"
Documentation = "https://github.com/midnightnow/devstress#readme"

[project.scripts]
devstress = "devstress:cli_main"

[tool.setuptools]
py-modules = ["devstress"]

[tool.setuptools.packages.find]
where = ["."]
include = ["devstress*"]